test/bad/grb2_val_pal-skd-dl_many_tstep_tsteps_timeipol_bbox.get
GET	/download?param=4&producer=pal_skandinavia_dl&format=grib2&starttime=20130917T0400&timestep=90&timesteps=4&bbox=15,58,38,71 HTTP/1.0
